--- a/CSS_HOMEWORK_1/style.css
+++ b/CSS_HOMEWORK_1/style.css
@@ -4,7 +4,7 @@
     background-color: red;
     margin-bottom: 20px;
     border: 1px solid;
-    padding: 10px;
+    padding-top: 10px;
     color: black;
     text-align: center;
 }
@@ -15,7 +15,7 @@
     background-color: orange;
     margin-bottom: 20px;
     border: 1px solid;
-    padding: 10px;
+    padding-top: 10px;
     color: black;
     text-align: center;
 }
@@ -28,7 +28,7 @@
     width: 200px;  
     color: black;
     text-align: center;
-    padding: 10px;
+    padding-top: 10px;
     margin-bottom: 20px;
 }
 
@@ -42,4 +42,5 @@
     text-align: center;
     vertical-align: middle;
     margin-bottom: 20px;
+    padding-top: 10px;
 }
