--- a/Media_shapes/main.css
+++ b/Media_shapes/main.css
@@ -1,5 +1,8 @@
+@media screen and (min-width: 1201px) {
+    
 .shapes {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     gap: 20px;
     margin-top: 20px;
@@ -21,12 +24,13 @@
     background-color: lightcoral;
     width: 300px;
     height: 300px;
-    border-radius: 50%;
+    border-radius: 100%;
 }
 
 .ellipse {
     background-color: plum;
     width: 300px;
     height: 200px;
-    border-radius: 50%;
+    border-radius: 100%;
+}
 }
