--- a/Media_shapes/media.css
+++ b/Media_shapes/media.css
@@ -1,6 +1,7 @@
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1200px) and (min-width: 884px){
     .shapes {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-around;
         gap: 20px;
         margin-top: 20px;
@@ -8,34 +9,35 @@
     
     .square {
         background-color: black;
-        width: 300px;
+        width: 200px;
         height: 300px;
     }
     
     .rectangle {
         background-color: cyan;
         width: 300px;
-        height: 150px;
+        height: 300px;
     }
     
     .circle {
         background-color: coral;
         width: 300px;
-        height: 300px;
-        border-radius: 50%;
+        height: 200px;
+        border-radius: 100%;
     }
     
     .ellipse {
         background-color: purple;
         width: 300px;
-        height: 200px;
-        border-radius: 50%;
+        height: 300px;
+        border-radius: 100%;
     }
 } 
 
-@media screen and (max-width: 883px){
+@media screen and (max-width: 883px) and (min-width: 541px){
     .shapes {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-around;
         gap: 20px;
         margin-top: 0;
@@ -45,32 +47,33 @@
         background-color: yellow;
         width: 200px;
         height: 200px;
+        border-radius: 100%;
     }
     
     .rectangle {
         background-color: green;
         width: 200px;
         height: 100px;
+        border-radius: 100%;
     }
     
     .circle {
         background-color: greenyellow;
         width: 200px;
-        height: 200px;
-        border-radius: 50%;
+        height: 100px;
     }
     
     .ellipse {
         background-color: yellowgreen;
         width: 200px;
-        height: 100px;
-        border-radius: 50%;
+        height: 200px;
     }
 }
 
-@media screen and (max-width: 540px){
+@media screen and (max-width: 540px) and (min-width: 321px){
     .shapes {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
         gap: 10px;
         margin-top: 10;
@@ -79,61 +82,64 @@
     .square {
         background-color: wheat;
         width: 200px;
-        height: 200px;
+        height: 100px;
+        border-radius: 100%;
     }
     
     .rectangle {
         background-color: mediumaquamarine;
         width: 200px;
-        height: 100px;
+        height: 200px;
+        border-radius: 100%;
     }
     
     .circle {
         background-color: aqua;
         width: 200px;
-        height: 200px;
-        border-radius: 50%;
+        height: 100px;
     }
     
     .ellipse {
         background-color: mediumslateblue;
         width: 200px;
-        height: 100px;
-        border-radius: 50%;
+        height: 200px;
     }
 }
 
 @media screen and (max-width: 320px){
     .shapes {
         display: flex;
-        justify-content: space-between;
-        gap: 10px;
-        margin-top: 10;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        gap: 20px;
+        margin-top: 20px;
     }
     
     .square {
-        background-color: lavender;
-        width: 100px;
-        height: 100px;
+        background-color: gray;
+        width: 300px;
+        height: 300px;
     }
     
     .rectangle {
-        background-color: salmon;
-        width: 100px;
-        height: 50px;
+        background-color: darkcyan;
+        width: 300px;
+        height: 150px;
     }
     
     .circle {
-        background-color: honeydew;
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
+        width: 0;
+        height: 0;
+        border-bottom: 100px solid transparent;
+        border-left: 50px solid transparent;
+        border-right: 50px solid #000;
     }
     
     .ellipse {
-        background-color: goldenrod;
-        width: 100px;
-        height: 50px;
-        border-radius: 50%;
+        width: 0;
+        height: 0;
+        border-top: 100px solid transparent;
+        border-left: 50px solid transparent;
+        border-right: 50px solid #333;
     }
 }
